ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard # same ns as the service and pod
spec:
  rules:
  - host: dashboard.com # every incoming request will be forwarded to the internal service 'kubernetes-dashboard'
    http:
      paths:
      - path: /about
        backend:
          serviceName: about-service
          servicePort: 3000
      - path: /home
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
